feat: 캐릭터 클릭 시 뜨는 정보 추가

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import 'tailwindcss';
+
+@theme {
+    --color-main: #0B3954;
+    --color-text: #087E8B;
+    --color-middletext: #BFD7EA;
+    --breakpoint-xs: 23rem;
+}
