--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&display=swap');
+@import "tailwindcss";
 
 @theme {
-    --color-main: #0B3954;
-    --color-text: #087E8B;
-    --color-middletext: #BFD7EA;
-    --breakpoint-xs: 23rem;
+  --color-main: #0b3954;
+  --color-text: #087e8b;
+  --color-middletext: #bfd7ea;
+  --breakpoint-xs: 23rem;
+  --font-phudu: "Phudu", sans-serif;
 }
