feat: custom 디자인 추가

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@
   --font-gothic: "Nanum Gothic Coding", monospace;
   --font-monoKorea: "Noto Sans KR", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
